--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,8 @@ a         { color: #91736b; text-decoration: none; }
 
 .main {
     float: left;
-    width: 880px;
+    min-width: 880px;
+	width: auto;
     padding: 40px 30px;
     min-height: 600px;
     height: auto;
