--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--
-         **
-         * Auther:      掌心
-         * Contact:     http://www.zhanxin.info
-         * Create:      2013.08.10
-         * Theme Name:  Kunka
-         * Authorize:   BY-NC-SA
-         **
-        -->
         <meta charset="utf-8">
         <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
         <!-- meta -->
@@ -75,7 +66,7 @@
         </div>
         <div class="foot">
             <div class="footer">
-                <p>Copyright 2012. Powered by Jason, Design by <a href="http://www.zhanxin.info" target="_blank">zhanxin.info</a>.</p>
+                <p>Copyright 2012. Powered by Jason</p>
             </div>
         </div>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
