--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ comment: true
         <span class="info-title"><i class="icon-calendar"></i> Published: </span>
         <span class="info-date">{{ page.date | date_to_string }}</span>
         <span class="info-title"><i class="icon-folder-open"></i> Category: </span>
-        <span class="info-link"><a href="{{ site.url }}/categories.html#{{ page.category }}-ref" >{{ page.category }}|{{ page.categories }}</a></span>
+        <span class="info-link"><a href="{{ site.url }}/categories.html#{{ page.category }}-ref" >{{ page.categories }}</a></span>
     </div>
     {{ content }}
     <nav class="article-previous fn-clear">
