--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
                 <p>Copyright 2012. Powered by Jason</p>
             </div>
         </div>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.3.js"></script>
         {% if page.comment %}
             {% if site.disqus.config %}
             <script type="text/javascript">
